tests/ui/overloaded/overloaded-calls-nontuple.stderr
error[E0059]: type parameter to bare `FnMut` trait must be a tuple
  --> $DIR/overloaded-calls-nontuple.rs:10:6
   |
LL | impl FnMut<isize> for S {
   |      ^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`
   |
note: required by a bound in `FnMut`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error[E0059]: type parameter to bare `FnOnce` trait must be a tuple
  --> $DIR/overloaded-calls-nontuple.rs:18:6
   |
LL | impl FnOnce<isize> for S {
   |      ^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`
   |
note: required by a bound in `FnOnce`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error[E0277]: functions with the "rust-call" ABI must take a single non-self tuple argument
  --> $DIR/overloaded-calls-nontuple.rs:12:5
   |
LL |     extern "rust-call" fn call_mut(&mut self, z: isize) -> isize {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`

error[E0277]: functions with the "rust-call" ABI must take a single non-self tuple argument
  --> $DIR/overloaded-calls-nontuple.rs:21:5
   |
LL |     extern "rust-call" fn call_once(mut self, z: isize) -> isize {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Tuple` is not implemented for `isize`

error[E0277]: `isize` is not a tuple
  --> $DIR/overloaded-calls-nontuple.rs:23:23
   |
LL |         self.call_mut(z)
   |              -------- ^ the trait `Tuple` is not implemented for `isize`
   |              |
   |              required by a bound introduced by this call
   |
note: required by a bound in `call_mut`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
help: use a unary tuple instead
   |
LL |         self.call_mut((z,))
   |                       + ++

error[E0059]: cannot use call notation; the first type parameter for the function trait is neither a tuple nor unit
  --> $DIR/overloaded-calls-nontuple.rs:29:10
   |
LL |     drop(s(3))
   |          ^^^^

error[E0277]: `isize` is not a tuple
  --> $DIR/overloaded-calls-nontuple.rs:29:10
   |
LL |     drop(s(3))
   |          ^^^^ the trait `Tuple` is not implemented for `isize`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0059, E0277.
For more information about an error, try `rustc --explain E0059`.
